Set cors to expose Authorization header.